# firebase-auth-gateway

./: .gitignore  README.md
backend/: .env.deploy.example  .env.example  Dockerfile  README.md  deploy-to-cloud-run.sh  main.py  requirements.txt
backend/app/: __init__.py  main.py
backend/app/config/: __init__.py  settings.py
backend/app/models/: __init__.py  requests.py  responses.py
backend/app/routes/: __init__.py  auth.py  health.py
backend/app/services/: __init__.py  auth_service.py  domain_service.py  token_service.py
backend/tests/: __init__.py  conftest.py  test_auth_service.py  test_domain_service.py  test_routes_health.py  test_token_service.py
examples/python-fastapi/: README.md  main.py  requirements.txt
examples/python-fastapi/templates/: index.html  protected.html
examples/react-client/: README.md  index.html  package.json
examples/react-client/src/: App.tsx  index.css
examples/react-client/src/components/: Navbar.tsx  ProtectedRoute.tsx
examples/react-client/src/pages/: HomePage.tsx  LoginPage.tsx  ProfilePage.tsx
examples/vanilla-js/: README.md  index.html
javascript-sdk/: .npmrc  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
javascript-sdk/src/: api-client.ts  auth-context.tsx  events.ts  index.ts  types.ts  use-auth.ts  vanilla-auth.ts
python-sdk/: README.md  pyproject.toml
python-sdk/auth_gateway_sdk/: __init__.py  client.py  config.py  exceptions.py  models.py
python-sdk/auth_gateway_sdk/integrations/: __init__.py  fastapi.py
python-sdk/tests/: test_fastapi_integration.py  test_hanging_fix_validation.py  test_hanging_reproduction.py  test_simplified_login.py  test_stress_hanging.py
